<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:background="@drawable/fondo"
    tools:context=".PL6_Empleado" >

    <TextView
        android:id="@+id/PL6_tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/pl6_tvNombre"
        android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/PL6_tvUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        	android:visibility="invisible"
            android:text="@string/pl6_tvUser" />

        <TextView
            android:id="@+id/PL6_tvFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        	android:visibility="invisible"
            android:text="@string/pl6_tvFechaNacimiento" />

        <TextView
            android:id="@+id/PL6_tvPuesto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        	android:visibility="invisible"
            android:text="@string/pl6_tvPuesto" />

        <TextView
            android:id="@+id/PL6_tvTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        	android:visibility="invisible"
            android:text="@string/pl6_tvTelefono" />

        <TextView
            android:id="@+id/PL6_tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        	android:visibility="invisible"
            android:text="@string/pl6_tvEmail" />

         <Button
            android:id="@+id/PL6_btTelefono"
            android:layout_marginTop="15dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
        	android:visibility="invisible"
        	android:onClick="hacerLlamada"
        	android:background="@drawable/selector_boton"
            android:drawableLeft="@android:drawable/ic_menu_call"
            android:text="@string/pl6_btTelefono" />
        
        <Button
            android:id="@+id/PL6_btEmail"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:onClick="mandarMail"
            android:paddingLeft="10dp"
            android:drawableLeft="@android:drawable/ic_dialog_email"
        	android:visibility="invisible"
        	android:background="@drawable/selector_boton"
            android:text="@string/pl6_btEmail" />
        
        

</LinearLayout>
