<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/PL2_tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pl2_tvNombre"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/PL2_tvFechaEntrega"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pl2_tvFechaEntrega" />

        <TextView
            android:id="@+id/PL2_tvPrioridad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pl2_tvPrioridad" />

        <TextView
            android:id="@+id/PL2_tvEstado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pl2_tvEstado" />

    </LinearLayout>

</LinearLayout>
