<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:background="@drawable/fondo"
    tools:context=".PL4_Cliente" >

    <TextView
        android:id="@+id/PL4_tvNombre"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pl4_tvNombre"
        android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/PL4_tvEmpresa"
        	android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pl4_tvEmpresa"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <TextView
            android:id="@+id/PL4_tvTelefono"
        	android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pl4_tvTelefono"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/PL4_tvEmail"
        	android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pl4_tvEmail"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/PL4_btEmail"
        	android:visibility="invisible"
        	android:paddingLeft="10dp"
        	android:layout_marginTop="15dp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:onClick="mandarMail"
            android:background="@drawable/selector_boton"
            android:drawableLeft="@android:drawable/ic_dialog_email"
            android:text="@string/pl4_btEmail" />
        
        <Button
            android:id="@+id/PL4_btTelefono"
        	android:visibility="invisible"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:onClick="hacerLlamada"
            android:background="@drawable/selector_boton"
            android:drawableLeft="@android:drawable/ic_menu_call"
            android:text="@string/pl4_btTelefono" />

</LinearLayout>
