<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_vertical|center_horizontal"
    android:background="@drawable/fondo"
    tools:context=".PL1_Conexion" >

    <ScrollView
        android:id="@+id/PL1_sv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/PL1_tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pl1_tvLogin"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/PL1_etLogin"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/PL1_tvPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pl1_tvPass"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/PL1_etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/PL1_btConectar"
        android:layout_width="150dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:onClick="conectarse"
        android:background="@drawable/selector_boton"
        android:text="@string/pl1_btConectar" />

</LinearLayout>
